--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -143,6 +143,7 @@ img {
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
+    cursor: pointer;
 }
 
 .ImageGalleryItem-image {
@@ -183,6 +184,7 @@ img {
 * Стили компонента Buton (Load more)
 */
 .Button {
+  margin-top: 15px;
   padding: 8px 16px;
   border-radius: 2px;
   background-color: #3f51b5;
